Package_Tools/include-C/suitesparse/SuiteSparse_config.pp


procedure SUITESPARSE_BLAS_DGEMV(trans:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:Pdouble; A:Pdouble; 
            lda:PSUITESPARSE_BLAS_INT; X:Pdouble; incx:PSUITESPARSE_BLAS_INT; beta:Pdouble; Y:Pdouble; 
            incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_SGEMV(trans:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:Psingle; A:Psingle; 
            lda:PSUITESPARSE_BLAS_INT; X:Psingle; incx:PSUITESPARSE_BLAS_INT; beta:Psingle; Y:Psingle; 
            incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZGEMV(trans:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:pointer; A:pointer; 
            lda:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT; beta:pointer; Y:pointer; 
            incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CGEMV(trans:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; alpha:pointer; A:pointer; 
            lda:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT; beta:pointer; Y:pointer; 
            incy:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ trsv: solve Lx=b, Ux=b, L'x=b, or U'x=b }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DTRSV(uplo:Pchar; trans:Pchar; diag:Pchar; n:PSUITESPARSE_BLAS_INT; A:Pdouble; 
            lda:PSUITESPARSE_BLAS_INT; X:Pdouble; incx:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_STRSV(uplo:Pchar; trans:Pchar; diag:Pchar; n:PSUITESPARSE_BLAS_INT; A:Psingle; 
            lda:PSUITESPARSE_BLAS_INT; X:Psingle; incx:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZTRSV(uplo:Pchar; trans:Pchar; diag:Pchar; n:PSUITESPARSE_BLAS_INT; A:pointer; 
            lda:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CTRSV(uplo:Pchar; trans:Pchar; diag:Pchar; n:PSUITESPARSE_BLAS_INT; A:pointer; 
            lda:PSUITESPARSE_BLAS_INT; X:pointer; incx:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ trsm: solve LX=B, UX=B, L'X=B, or U'X=B }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DTRSM(side:Pchar; uplo:Pchar; transa:Pchar; diag:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; alpha:Pdouble; A:Pdouble; lda:PSUITESPARSE_BLAS_INT; B:Pdouble; 
            ldb:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_STRSM(side:Pchar; uplo:Pchar; transa:Pchar; diag:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; alpha:Psingle; A:Psingle; lda:PSUITESPARSE_BLAS_INT; B:Psingle; 
            ldb:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZTRSM(side:Pchar; uplo:Pchar; transa:Pchar; diag:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; alpha:pointer; A:pointer; lda:PSUITESPARSE_BLAS_INT; B:pointer; 
            ldb:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CTRSM(side:Pchar; uplo:Pchar; transa:Pchar; diag:Pchar; m:PSUITESPARSE_BLAS_INT; 
            n:PSUITESPARSE_BLAS_INT; alpha:pointer; A:pointer; lda:PSUITESPARSE_BLAS_INT; B:pointer; 
            ldb:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ gemm: C = alpha*A*B + beta*C }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DGEMM(transa:Pchar; transb:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; 
            alpha:Pdouble; A:Pdouble; lda:PSUITESPARSE_BLAS_INT; B:Pdouble; ldb:PSUITESPARSE_BLAS_INT; 
            beta:Pdouble; C:Pdouble; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_SGEMM(transa:Pchar; transb:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; 
            alpha:Psingle; A:Psingle; lda:PSUITESPARSE_BLAS_INT; B:Psingle; ldb:PSUITESPARSE_BLAS_INT; 
            beta:Psingle; C:Psingle; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_ZGEMM(transa:Pchar; transb:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; 
            alpha:pointer; A:pointer; lda:PSUITESPARSE_BLAS_INT; B:pointer; ldb:PSUITESPARSE_BLAS_INT; 
            beta:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_CGEMM(transa:Pchar; transb:Pchar; m:PSUITESPARSE_BLAS_INT; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; 
            alpha:pointer; A:pointer; lda:PSUITESPARSE_BLAS_INT; B:pointer; ldb:PSUITESPARSE_BLAS_INT; 
            beta:pointer; C:pointer; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{------------------------------------------------------------------------------ }
{ syrk/herk: C = alpha*A*A' + beta*C ; or C = alpha*A'*A + beta*C }
{------------------------------------------------------------------------------ }
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_DSYRK(uplo:Pchar; trans:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; alpha:Pdouble; 
            A:Pdouble; lda:PSUITESPARSE_BLAS_INT; beta:Pdouble; C:Pdouble; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
(* Const before type ignored *)
procedure SUITESPARSE_BLAS_SSYRK(uplo:Pchar; trans:Pchar; n:PSUITESPARSE_BLAS_INT; k:PSUITESPARSE_BLAS_INT; alpha:Psingle; 
            A:Psingle; lda:PSUITESPARSE_BLAS_INT; beta:Psingle; C:Psingle; ldc:PSUITESPARSE_BLAS_INT);cdecl;external;
{ input: }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ input/output: }
{ input: }
